force-app/main/default/objects/Quiz_Question__c/Quiz_Question__c.object-meta.xml
<CustomObject>
    <label>Quiz_Question</label>
    <nameField>
        <displayFormat>Q-{0000000}</displayFormat>
        <label>Quiz_Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quiz_Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>