force-app/main/default/objects/Quiz_Question__c/fields/isMultiAnswer__c.field-meta.xml
<CustomField>
    <fullName>isMultiAnswer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isMultiAnswer</label>
    <type>Checkbox</type>
</CustomField>