force-app/main/default/objects/Quiz_Question__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>isMultiAnswer__c</columns>
    <columns>Quiz_Assessment_Name__c</columns>
    <columns>Question__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>